--- a/ChickShop/chickShop.html
+++ b/ChickShop/chickShop.html
@@ -11,6 +11,13 @@
 </head>
 
 <body>
+    <div class="confirm-box">
+        <div class="Q">คุณต้องการซื้อสินค้านี้หรือไม่</div>
+        <div class="A">
+            <button class="yes">YES</button>
+            <button class="no">NO</button>
+        </div>
+    </div>
     <header>
         <img src="image/IMG_1012.PNG" class="logo">
         <div class="chicken">
@@ -26,27 +33,27 @@
         </nav>
         <div class="shop-zone avatar-shop active">
             <div class="wrapper">
-                <div class="item">
+                <div class="item" id="1">
                     <img src="../ImageAsset/Clothes/Clothes7.PNG" alt="">
                     <div class="price">${Price}</div>
                 </div>
-                <div class="item">
+                <div class="item" id="2">
                     <img src="../ImageAsset/Clothes/Clothes12.PNG" alt="">
                     <div class="price">${Price}</div>
                 </div>
-                <div class="item">
+                <div class="item" id="3">
                     <img src="../ImageAsset/Clothes/Clothes9.PNG" alt="">
                     <div class="price">${Price}</div>
                 </div>
-                <div class="item">
+                <div class="item" id="4">
                     <img src="../ImageAsset/Face/Face7.PNG" alt="">
                     <div class="price">${Price}</div>
                 </div>
-                <div class="item">
+                <div class="item" id="5">
                     <img src="../ImageAsset/Face/Face7.PNG" alt="">
                     <div class="price">${Price}</div>
                 </div>
-                <div class="item">
+                <div class="item" id="6">
                     <img src="../ImageAsset/Face/Face7.PNG" alt="">
                     <div class="price">${Price}</div>
                 </div>
@@ -54,32 +61,32 @@
         </div>
         <div class="shop-zone chick-shop">
             <div class="wrapper">
-                <div class="item">
+                <div class="item" id="7">
                     <img src="image/IMG_0993.PNG" alt="">
                     <div class="price">${Price}</div>
                 </div>
-                <div class="item">
+                <div class="item" id="8">
                     <img src="image/IMG_0993.PNG" alt="">
                     <div class="price">${Price}</div>
                 </div>
-                <div class="item">
+                <div class="item" id="9">
                     <img src="image/IMG_0993.PNG" alt="">
                     <div class="price">${Price}</div>
                 </div>
-                <div class="item">
+                <div class="item" id="10">
                     <img src="image/IMG_0993.PNG" alt="">
                     <div class="price">${Price}</div>
                 </div>
-                <div class="item">
+                <div class="item" id="11">
                     <img src="image/IMG_0993.PNG" alt="">
                     <div class="price">${Price}</div>
                 </div>
-                <div class="item">
+                <div class="item" id="12">
                     <img src="image/IMG_0993.PNG" alt="">
                     <div class="price">${Price}</div>
                 </div>
             </div>
-        </div> 
+        </div>
     </div>
     <footer>
         <div class="footer-container" id="home">
@@ -93,6 +100,22 @@
         const chickShopBtn = document.querySelector('.chick');
         const chickShop = document.querySelector('.chick-shop');
         const home = document.getElementById('home');
+        const items = document.querySelectorAll('.item');
+        const confirmBox = document.querySelector('.confirm-box');
+        const yes = document.querySelector('.yes');
+        const no = document.querySelector('.no');
+        const id1 = document.getElementById('1');
+        const id2 = document.getElementById('2');
+        const id3 = document.getElementById('3');
+        const id4 = document.getElementById('4');
+        const id5 = document.getElementById('5');
+        const id6 = document.getElementById('6');
+        const id7 = document.getElementById('7');
+        const id8 = document.getElementById('8');
+        const id9 = document.getElementById('9');
+        const id10 = document.getElementById('10');
+        const id11 = document.getElementById('11');
+        const id12 = document.getElementById('12');
 
         avatarShopBtn.addEventListener('click', () => {
             console.log('click on avatar shop');
@@ -111,6 +134,68 @@
             chickShopBtn.classList.add('focus');
             console.log('After adding "active":', chickShop.classList);
         });
+
+        function handleYesClick() {
+            console.log('Confirm for Item.');
+
+            // Decrease the count and remove the event listener after three clicks
+            const yesButton = document.querySelector('.yes');
+            let clickCount = parseInt(yesButton.dataset.clickCount) || 0;
+            clickCount++;
+
+            if (clickCount >= 100) {
+                yesButton.removeEventListener('click', handleYesClick);
+            }
+
+            yesButton.dataset.clickCount = clickCount;
+        }
+
+        // Example of attaching click event to the "YES" button
+        const yesButton = document.querySelector('.yes');
+        yesButton.addEventListener('click', handleYesClick);
+
+        function handlePopUp() {
+            confirmBox.classList.add('active');
+
+            yes.addEventListener('clcik', handleYesClick);
+
+            no.addEventListener('click', () => {
+                confirmBox.classList.remove('active');
+            })
+        }
+
+        for (let i = 1; i <= 12; i++) {
+            const itemId = `${i}`;
+            const item = document.getElementById(itemId);
+
+            if (item) {
+                item.addEventListener('click', (event) => {
+                    event.stopPropagation();
+                    handlePopUp();
+                });
+            } else {
+                console.error(`Element with ID ${itemId} not found.`);
+            }
+        }
+
+        // id1.addEventListener('click', () => handlePopUp())
+        // id2.addEventListener('click', () => handlePopUp())
+        // id3.addEventListener('click', () => handlePopUp())
+        // id4.addEventListener('click', () => handlePopUp())
+        // id5.addEventListener('click', () => handlePopUp())
+        // id6.addEventListener('click', () => handlePopUp())
+        // id7.addEventListener('click', () => handlePopUp())
+        // id8.addEventListener('click', () => handlePopUp())
+        // id9.addEventListener('click', () => handlePopUp())
+        // id10.addEventListener('click', () => handlePopUp())
+        // id11.addEventListener('click', () => handlePopUp())
+        // id12.addEventListener('click', () => handlePopUp())
+
+
+        // items.forEach((item, index) => {
+        //     console.log(`Count ${index+1}`);
+        //     item.addEventListener('click', () => handlePopUp(index + 1));
+        // })
 
         home.addEventListener('click', () => {
             window.location.href = '../ChickChatHome/home.html';
