--- a/ChickChatHome/home.html
+++ b/ChickChatHome/home.html
@@ -80,16 +80,21 @@
     </div>
     <div class="HowToUse" style="display: none;">
         <div class="container-HowToUse">
-            <div class="slider-wrapper">
+            <div class="slider-wrapper"> 
                 <button class="slide-button" id="prev-slide"><i class="fa-solid fa-arrow-left"></i></button>
                 <div class="image-list">
                     <div>
-                        <img src="image/Login.png" alt="img-1" class="image-item">
+                        <img src="Image/Login.png" alt="img-1" class="image-item">
                         <h1 class="subtitle">Log in</h1>
-                        <p class="description">กด <u>Log in</u> เข้าสู่ระบบ ในการเข้าสู่ระบบครั้งแรก user จะได้รับ<u>น่องไก่</u> 5 น่อง การเข้าสู่ระบบแต่ละวัน user จะได้รับสิทธิ์การส่ง <u>like</u> ให้ 10 ครั้งต่อวัน</p>    
+                        <p class="description">กด <u>Log in</u> เข้าสู่ระบบ ในการเข้าสู่ระบบครั้งแรก user
+                            จะได้รับ<u>น่องไก่</u> 5 น่อง การเข้าสู่ระบบแต่ละวัน user จะได้รับสิทธิ์การส่ง <u>like</u>
+                            ให้ 10 ครั้งต่อวัน</p>
                     </div>
-                    <div>
-                        <img src="image/Create_avatar.png" alt="img-1" class="image-item">
+                    <div class="Create_avatar">
+                        <img src="Image/Create_avatar.png" alt="img-1" class="image-item">
+                        <h1 class="subtitle">Create Avatar</h1>
+                        <p class="description">เมื่อทำการ <u>Log in</u> เรียบร้อยแล้ว user จะสามารถสร้าง <u>avatar</u>
+                            เพื่อใช้ในการพูดคุย นอกจากนี้ยังสามารถติด <u>Tag</u> บอกความรู้สึกหรือสถานะได้</p>
                     </div>
                     <div>
                         <img src="Image/IMG_0992.PNG" alt="img-1" class="image-item">
@@ -105,11 +110,6 @@
                     </div>
                 </div>
                 <button class="slide-button" id="next-slide"><i class="fa-solid fa-arrow-right"></i></button>
-            </div>
-            <div class="slider-scrollbar">
-                <div class="scrollbar-track">
-                    <div class="scrollbar-thumb"></div>
-                </div>
             </div>
         </div>
     </div>
@@ -128,7 +128,7 @@
         const containerHowToUse = document.querySelector(".HowToUse");
 
         toggleButton.addEventListener('click', () => {
-            if(containerHowToUse.style.display === "none") {
+            if (containerHowToUse.style.display === "none") {
                 containerHowToUse.style.display = "block";
             } else {
                 containerHowToUse.style.display = "none";
@@ -138,61 +138,30 @@
         const initSlider = () => {
             const imageList = document.querySelector(".slider-wrapper .image-list");
             const slideButtons = document.querySelectorAll(".slider-wrapper .slide-button");
-            const sliderScrollbar = document.querySelector(".container-HowToUse .slider-scrollbar")
-            const scrollbarThumb = sliderScrollbar.querySelector(".scrollbar-thumb")
+            const sliderScrollbar = document.querySelector(".container-HowToUse .slider-scrollbar");
             const maxScrollLeft = imageList.scrollWidth - imageList.clientWidth;
 
-            // scrollbarThumb.addEventListener("mousedown", (e) => {
-            //     const startX = e.clientX;
-            //     const thumbPosition = scrollbarThumb.offsetLeft;
-
-            //     const handleMouseMove = (e) => {
-            //         const deltaX = e.clientX - startX;
-            //         const newThumbPosition = thumbPosition + deltaX;
-            //         const maxThumbPosition = sliderScrollbar.getBoundingClientRect().width - scrollbarThumb.offsetWidth;
-
-            //         const boundPosition = Math.max(0, Math.min(maxThumbPosition, newThumbPosition));
-            //         const scrollPosition = (boundPosition / maxThumbPosition) * maxScrollLeft;
-
-            //         scrollbarThumb.style.left = `${boundPosition}px`;
-            //         imageList.scrollLeft = scrollPosition;
-            //     }
-
-            //     const handleMouseUp = () => {
-            //         document.removeEventListener("mousemove", handleMouseMove);
-            //         document.removeEventListener("mouseup", handleMouseUp);
-            //     }
-
-            //     document.addEventListener("mousemove", handleMouseMove);
-            //     document.addEventListener("mouseup", handleMouseUp);
-            // })
+            console.log(`${imageList.scrollWidth}`);
 
             slideButtons.forEach(button => {
                 button.addEventListener("click", () => {
                     const direction = button.id === "prev-slide" ? -1 : 1;
                     const scrollAmount = imageList.clientWidth * direction;
                     imageList.scrollBy({ left: scrollAmount, behavior: "smooth" });
-                })
+                });
             });
 
             const handleSlideButtons = () => {
                 slideButtons[0].style.display = imageList.scrollLeft <= 0 ? "none" : "block";
                 slideButtons[2].style.display = imageList.scrollLeft >= maxScrollLeft ? "none" : "block";
-            }
-
-            const updateScrollThumbPosition = () => {
-                const scrollPosition = imageList.scrollLeft;
-                const thumbPosition = (scrollPosition / maxScrollLeft) * (sliderScrollbar.clientWidth - scrollbarThumb.offsetWidth);
-                scrollbarThumb.style.left = `${thumbPosition}px`;
-            }
+            };
 
             imageList.addEventListener("scroll", () => {
                 handleSlideButtons();
-                updateScrollThumbPosition();
             });
-        }
+        };
 
-        window.addEventListener("load", initSlider)
+        window.addEventListener("load", initSlider);
     </script>
     <script src="home.js"></script>
 </body>
