--- a/ChickChatHome/home.html
+++ b/ChickChatHome/home.html
@@ -11,6 +11,18 @@
 </head>
 
 <body>
+    <div class="message-container">
+        <div class="mark"><i class="fa-solid fa-circle-xmark"></i></div>
+        <div class="message-box">
+            <div class="message">hello</div>
+            <div class="message">hello</div>
+            <div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo aperiam numquam aspernatur, ex, quas minima ratione soluta voluptates, provident omnis nisi quo. Saepe non porro suscipit voluptate autem voluptatibus ipsa.</div>
+            <div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo aperiam numquam aspernatur, ex, quas minima ratione soluta voluptates, provident omnis nisi quo. Saepe non porro suscipit voluptate autem voluptatibus ipsa.</div>
+            <div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo aperiam numquam aspernatur, ex, quas minima ratione soluta voluptates, provident omnis nisi quo. Saepe non porro suscipit voluptate autem voluptatibus ipsa.</div>
+            <div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo aperiam numquam aspernatur, ex, quas minima ratione soluta voluptates, provident omnis nisi quo. Saepe non porro suscipit voluptate autem voluptatibus ipsa.</div>
+            <div class="message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo aperiam numquam aspernatur, ex, quas minima ratione soluta voluptates, provident omnis nisi quo. Saepe non porro suscipit voluptate autem voluptatibus ipsa.</div>
+        </div>
+    </div>
     <div class="container">
         <div class="grid">
             <header class="header">
@@ -97,17 +109,26 @@
                             เพื่อใช้ในการพูดคุย นอกจากนี้ยังสามารถติด <u>Tag</u> บอกความรู้สึกหรือสถานะได้</p>
                     </div>
                     <div>
-                        <img src="Image/IMG_0992.PNG" alt="img-1" class="image-item">
+                        <img src="Image/Create_avatar.png" alt="img-1" class="image-item">
+                        <h1 class="subtitle">Create Avatar</h1>
+                        <p class="description">เมื่อทำการ <u>Log in</u> เรียบร้อยแล้ว user จะสามารถสร้าง <u>avatar</u>
+                            เพื่อใช้ในการพูดคุย นอกจากนี้ยังสามารถติด <u>Tag</u> บอกความรู้สึกหรือสถานะได้</p>
                     </div>
                     <div>
-                        <img src="Image/IMG_0993.PNG" alt="img-1" class="image-item">
-                    </div>
+                        <img src="Image/Create_avatar.png" alt="img-1" class="image-item">
+                        <h1 class="subtitle">Create Avatar</h1>
+                        <p class="description">เมื่อทำการ <u>Log in</u> เรียบร้อยแล้ว user จะสามารถสร้าง <u>avatar</u>
+                            เพื่อใช้ในการพูดคุย นอกจากนี้ยังสามารถติด <u>Tag</u> บอกความรู้สึกหรือสถานะได้</p>                    </div>
                     <div>
-                        <img src="Image/IMG_0996.PNG" alt="img-1" class="image-item">
-                    </div>
+                        <img src="Image/Create_avatar.png" alt="img-1" class="image-item">
+                        <h1 class="subtitle">Create Avatar</h1>
+                        <p class="description">เมื่อทำการ <u>Log in</u> เรียบร้อยแล้ว user จะสามารถสร้าง <u>avatar</u>
+                            เพื่อใช้ในการพูดคุย นอกจากนี้ยังสามารถติด <u>Tag</u> บอกความรู้สึกหรือสถานะได้</p>                    </div>
                     <div>
-                        <img src="Image/IMG_0995.PNG" alt="img-1" class="image-item">
-                    </div>
+                        <img src="Image/Create_avatar.png" alt="img-1" class="image-item">
+                        <h1 class="subtitle">Create Avatar</h1>
+                        <p class="description">เมื่อทำการ <u>Log in</u> เรียบร้อยแล้ว user จะสามารถสร้าง <u>avatar</u>
+                            เพื่อใช้ในการพูดคุย นอกจากนี้ยังสามารถติด <u>Tag</u> บอกความรู้สึกหรือสถานะได้</p>                    </div>
                 </div>
                 <button class="slide-button" id="next-slide"><i class="fa-solid fa-arrow-right"></i></button>
             </div>
@@ -115,7 +136,7 @@
     </div>
     <div class="footer">
         <div class="icon-box">
-            <a href=""><i class="fa-solid fa-envelope"></i></a>
+            <button class="mail"><i class="fa-solid fa-envelope"></i></button>
             <a href="../ChickShop/chickShop.html"><i class="fa-solid fa-cart-shopping"></i></a>
         </div>
         <div class="help">
