--- a/ChickShop/chickShop.html
+++ b/ChickShop/chickShop.html
@@ -68,27 +68,27 @@
         <div class="shop-zone chick-shop">
             <div class="wrapper">
                 <div class="item" id="7">
-                    <img src="image/IMG_0993.PNG" alt="">
+                    <img src="../ImageAsset/package/Pack1.PNG" alt="">
                     <div class="price">${Price}</div>
                 </div>
                 <div class="item" id="8">
-                    <img src="image/IMG_0993.PNG" alt="">
+                    <img src="../ImageAsset/package/Pack2.PNG" alt="">
                     <div class="price">${Price}</div>
                 </div>
                 <div class="item" id="9">
-                    <img src="image/IMG_0993.PNG" alt="">
+                    <img src="../ImageAsset/package/Pack3.PNG" alt="">
                     <div class="price">${Price}</div>
                 </div>
                 <div class="item" id="10">
-                    <img src="image/IMG_0993.PNG" alt="">
+                    <img src="../ImageAsset/package/Pack4.PNG" alt="">
                     <div class="price">${Price}</div>
                 </div>
                 <div class="item" id="11">
-                    <img src="image/IMG_0993.PNG" alt="">
+                    <img src="../ImageAsset/package/Pack5.PNG" alt="">
                     <div class="price">${Price}</div>
                 </div>
                 <div class="item" id="12">
-                    <img src="image/IMG_0993.PNG" alt="">
+                    <img src="../ImageAsset/package/Pack6.PNG" alt="">
                     <div class="price">${Price}</div>
                 </div>
             </div>
